<?xml version="1.0"?>
<package>
  <name>depth</name>
  <version>1.0.0</version>
  <description>generate depth</description>

  <maintainer email="3053583478@qq.com">Yang Zhang</maintainer>

  <license>TODO</license>

  <author>Yang Zhang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>livox_ros_driver2</build_depend>
  <run_depend>livox_ros_driver2</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>

  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>GTSAM</build_depend>
  <run_depend>GTSAM</run_depend>

</package>
